--- a/keycloak/base/keycloak-dep.yaml
+++ b/keycloak/base/keycloak-dep.yaml
@@ -1,26 +1,26 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: keycloak-dev
+  name: keycloak
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: keycloak-db
-  namespace: keycloak-dev
+  namespace: keycloak
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: gp3
+  storageClassName: gp3-csi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: keycloak
-  namespace: keycloak-dev
+  namespace: keycloak
   labels:
     app: keycloak
 spec:
@@ -63,7 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: keycloak
-  namespace: keycloak-dev
+  namespace: keycloak
   labels:
     app: keycloak
 spec:
@@ -79,7 +79,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: keycloak
-  namespace: keycloak-dev
+  namespace: keycloak
   labels:
     app: keycloak
 spec:
