--- a/keycloak/base/admin-secret.yaml
+++ b/keycloak/base/admin-secret.yaml
@@ -1,3 +1,4 @@
+# This is an example of the secret you need to create for Keycloak to run
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,5 +6,6 @@ metadata:
   namespace: keycloak-dev
 type: Opaque
 stringData:
-  KC_BOOTSTRAP_ADMIN_USERNAME: admin
-  KC_BOOTSTRAP_ADMIN_PASSWORD: change_me      # Change this to the strong password on deployment
+  # Change these to the strong password on deployment
+  KC_BOOTSTRAP_ADMIN_USERNAME: <admin_username>
+  KC_BOOTSTRAP_ADMIN_PASSWORD: <admin password>
