--- a/keycloak/base/kustomization.yaml
+++ b/keycloak/base/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - admin-secret.yaml
+  # You need to create a secret for the admin credentials before deploying this.
   - keycloak-dep.yaml
