Updated readme and makefile

--- a/keycloak/Makefile
+++ b/keycloak/Makefile
@@ -9,9 +9,11 @@ all: build push
 
 build:
 	podman build -t $(IMAGE_NAME):$(TAG) .
+	podman tag $(IMAGE_NAME):$(TAG) $(IMAGE_NAME):latest
 
 push:
 	podman push $(IMAGE_NAME):$(TAG)
-
+	podman push $(IMAGE_NAME):latest
 clean:
 	podman rmi -f $(IMAGE_NAME):$(TAG) || true
+	podman rmi -f $(IMAGE_NAME):latest || true
